content align changes and mobile down arrow fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -53,17 +53,16 @@
   width: 25px;
 }
 .header nav .subnav-ribbon .icon,
-.header nav .nav-hamburger .nav-hamburger-icon .icon .icon-solid-down-arrow {
+.header nav .nav-hamburger .nav-hamburger-icon .icon.icon-solid-down-arrow img {
   height: 25px;
   width: 25px;
-
 }
 
 .header nav .nav-sections>ul>li.top-nav>a>.icon {
   display: inline-block;
   position: relative;
-  height: 24px;
-  width: 24px;
+  height: 25px;
+  width: 25px;
 }
 .header nav .nav-sections>ul>li.top-nav>a>.icon img {
 
@@ -95,6 +94,9 @@
   grid-area: sections;
   display: block;
 }
+.header nav[aria-expanded="true"] .nav-sections {
+
+}
 
 .header nav .nav-sections>ul {
   display: flex;
@@ -103,6 +105,9 @@
   flex-direction: column;
   justify-content: center;
   gap: 40px;
+  box-shadow: 0 -8px 8px -4px #00000029;
+  opacity: 1;
+
 }
 
 .header nav .subnav-ribbon a {
@@ -160,6 +165,10 @@
 
 .header nav .subnav-ribbon[aria-expanded="true"] .subnav-dropdown span {
   transform: rotate(180deg);
+}
+.header nav .subnav-ribbon .subnav-dropdown span img {
+  height:25px;
+  width:25px;
 }
 
 .header nav .nav-sections>ul>li.top-nav[aria-expanded="true"]>a>span {
@@ -302,19 +311,21 @@
 @media screen and (min-width: 1280px) {
   .header nav {
     padding: 0 140px;
-    box-shadow: none;
+    /*box-shadow: none;*/
   }
 }
 @media (min-width: 1200px) {
   .header nav {
     padding: 0 140px;
-    box-shadow: none;
+    box-shadow: 0 8px 8px -4px #00000029;
+    opacity: 1;
   }
 }
 
 @media only screen and (min-width: 1025px) {
   .header nav {
     padding: 0 140px;
-    box-shadow: none;
+    box-shadow: 0 8px 8px -4px #00000029;
+    opacity: 1;
   }
 }
