--- a/blocks/hero/default-hero.css
+++ b/blocks/hero/default-hero.css
@@ -11,7 +11,7 @@
 .hero.block.default .image {
   display: block;
   position: absolute;
-  top: 42px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -93,6 +93,7 @@
   font-weight: var(--font-weight-thin);
   line-height: var(--line-height-s);
   color: var(--gray-neutral-70);
+  text-align: left;
 }
 
 .hero.block.default .content-wrapper.no-image .content p {
